<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jaffna Temple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_search">Start Searching Temples</string>
    <string name="Mylocation">From</string>
	<string name="distance">Distance in KM</string>
	<string name="Typ_templ">Temple Type</string>
	<string name="notemp">Number Of Temples</string>
	<string name="searchtemp">Search Temples</string>
	<string name="viewmap">Click Here to view results</string>
	<string name="gpslocation">GPS Location</string>
    

    
    
        <string-array name="start_Location">
        <item>Jaffna Town</item>
        <item>My GPS Location</item>
    	</string-array>
    	
        <string-array name="distance_search">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    	</string-array>
  
        <string-array name="Temple_Type">
        <item>Vinayakar</item>
        <item>Murugan</item>
        <item>Amman</item>
    	</string-array>
    	
        <string-array name="No_of_Temples">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
    	</string-array>
        <string name="textview">TextView</string>
        <string name="you_have_selected_the_following_option">You have Selected the Following option</string>
  
  

</resources>
